gost-on/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: gost-on
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: jaxanisl/gost-on:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "700Mi"
            cpu: "300m"
          limits:
            memory: "1500Mi"
            cpu: "500m"
      volumes:
      - name: app-code
        emptyDir: {}

        
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: gost-on
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
