gost-on/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: gost-on
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.21-alpine
        resources:
          requests:
            memory: "75Mi"
            cpu: "100m"          
          limits:
            memory: "128Mi"
            cpu: "140m"
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: static-files
          mountPath: /app/static
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: static-files
        emptyDir: {}


---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: gost-on
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  - protocol: TCP
    port: 443
    targetPort: 443
