gost-on/postgres.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: postgres
  namespace: gost-on
spec:
  labels: 1
  selector:
    matchLabels:
      app
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: postgres-user
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: postgres
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "128mi"
            cpu: "150m"
          limits:
            memory: "512mi"
            cpu: "300m"
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gost-on
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
