gost-on/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gost-on-ingress
  namespace: gost-on
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
